opensource-101/kubernetes-101/firstzone-example/configmap.yaml


# kubectl create configmap special-config --from-literal=dist=gangnam --from-literal=ctiy=seoul
# kubectl config cm
# kubectl create configmap special-config --from-literal=dist=gangnam --from-literal=ctiy=seoul -o=yaml --dry-run=client > configmap.yaml


apiVersion: v1
kind: Pod
metadata:
  name: configmap-test-pod
spec:
  containers:
    - name: configmap-test-pod
      image: alpine
      command: ["sleep", "3600"]
  restartPolicy: Never
