opensource-101/kubernetes-101/firstzone-example/cpu-mem-limit.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: resource-limit
spec:
  containers:
  - name: nginx-limite
    image: nginx
    resources:
      requests:
        memory: "10Mi"
        cpu: "50m"
      limits:
        memory: "100Mi"
        cpu: "200m"
