opensource-101/kubernetes-101/firstzone-example/secret.yaml
# kubectl create secret generic special-secret --from-literal=dist=gangnam --from-literal=ctiy=seoul
# kubectl get secret
# kubectl describe secret special-secret
# kubectl create secret generic special-secret --from-literal=dist=gangnam --from-literal=ctiy=seoul -o=yaml --dry-run=client > configmap.yaml

apiVersion: v1
kind: Pod
metadata:
  name: secret-test-pod
spec:
  containers:
    - name: secret-test-pod
      image: alpine
      command: ["sleep", "3600"]
      volumeMounts:
      - name: special-secret
        mountPath: "/special-secret"
        readOnly: true
  volumes:
  - name: special-secret
    secret:
      secretName: special-secret
      optional: true
  restartPolicy: Never
